src/objects/Key_Action_Decision__c.object
<CustomObject>
    <description>TOOLKIT - An object to track action items and key decisions related to the project.</description>
    <fields>
        <fullName>Accenture_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accenture Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Status__c, &quot;Completed&quot;)), NOW() - CreatedDate,  Completed_Date__c - (DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Outcome__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter details of the outcome of the action item (what was determined) or the decision reached (what was agreed to, which option was selected). This field is required when Status is Completed.</inlineHelpText>
        <label>Decision/Outcome</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a detailed desription of the Action to be completed or the Decision needed.</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date when the Action Item must be completed or the Decision must be made. Items not completed by the Due Date pose a risk to deliverables.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_Action_Decision__c</fullName>
        <displayFormat>KAD-{00000}</displayFormat>
        <label>Key Action/Decision #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Notes</label>
        <referenceTo>Meeting_Notes__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the options under evaluation.</inlineHelpText>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Days to close entered in Help Text are a suggestion, and can be changed by individual projects to meet their specific needs.</description>
        <inlineHelpText>Normal Priority items should be closed within 5 business days. High Priority items should be closed within 2 business days.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>High</fullName>
                    <color>#F3D904</color>
                    <label>High</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Capability2__c</fullName>
        <formula>Related_Request__r.Capability__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Capability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Issue_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Key Action/Decision is directly related to a single Issue or Risk, select that Issue or Risk here.</inlineHelpText>
        <label>Related Issue/Risk</label>
        <referenceTo>Issues_Risks__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Key_Action_Decision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Key Action/Decision was created as a result of another Action Item or Decision, select the related item here.</inlineHelpText>
        <label>Related Key Action/Decision</label>
        <referenceTo>Key_Action_Decision__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Release2__c</fullName>
        <formula>Related_Request__r.Release__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Key Action/Decision is directly related to a single Request, select that Request here.</inlineHelpText>
        <label>Related Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Key Actions/Decisions</relationshipLabel>
        <relationshipName>Key_Actions_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reopened__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies a Key Action or Decision that has been reopened.</inlineHelpText>
        <label>Reopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#A53711</color>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#F3D904</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#419249</color>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Key Action</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>Decision - Change Request</fullName>
                </value>
                <value>
                    <fullName>Decision - Key Complexity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Key Action/Decision</label>
    <listViews>
        <fullName>All_Completed_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Related_Release2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Key_Decision</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed Decisions</label>
    </listViews>
    <listViews>
        <fullName>All_Key_Actions_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Related_Release2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Key Actions/Decisions</label>
    </listViews>
    <listViews>
        <fullName>All_MR1_Key_Actions_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Release2__c</field>
            <operation>equals</operation>
            <value>Maintenance 1</value>
        </filters>
        <label>All MR1 Key Actions/Decisions</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Key_Decision</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open Decisions</label>
    </listViews>
    <listViews>
        <fullName>All_Overdue_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Overdue Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Overdue_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Key_Decision</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Overdue Decisions</label>
    </listViews>
    <listViews>
        <fullName>All_Release_5_Key_Actions_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Release2__c</field>
            <operation>equals</operation>
            <value>Release 5</value>
        </filters>
        <label>All Release 5 Key Actions/Decisions</label>
    </listViews>
    <listViews>
        <fullName>All_Release_5_Key_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Release2__c</field>
            <operation>equals</operation>
            <value>Release 5</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Decision,Decision - Key Complexity</value>
        </filters>
        <label>All Release 5 Key Decisions</label>
    </listViews>
    <listViews>
        <fullName>All_Release_8_Key_Decisions</fullName>
        <booleanFilter>(1 AND 2) or (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Release2__c</field>
            <operation>equals</operation>
            <value>Release 9</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Decision,Decision - Key Complexity,Decision - Change Request</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>3/1/2015 12:00 AM</value>
        </filters>
        <label>All Release 9 Key Decisions</label>
    </listViews>
    <listViews>
        <fullName>Critical_Design_Actions</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Accenture_Resource__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Critical Design:</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Critical Design Actions</label>
    </listViews>
    <listViews>
        <fullName>My_Completed_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>My Completed Action Items</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Action_Item</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Open Action Items</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Key_Action_Decision__c.Key_Decision</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Open Decisions</label>
    </listViews>
    <listViews>
        <fullName>Overdue_Key_Actions_Decisions</fullName>
        <columns>NAME</columns>
        <columns>Key_Action_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Open__c</columns>
        <columns>Description__c</columns>
        <columns>Decision_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Overdue Key Actions/Decisions</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Action/Decision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Actions/Decisions</pluralLabel>
    <recordTypes>
        <fullName>Action_Item</fullName>
        <active>true</active>
        <description>Used to document Action Items that need to be completed by resources on the Program/Project.</description>
        <label>Action Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key_Decision</fullName>
        <active>true</active>
        <description>Used to track Key Decisions that impact the Program/Project.</description>
        <label>Key Decision</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Completed_Date</fullName>
        <active>false</active>
        <description>Must enter Completed Date</description>
        <errorConditionFormula>ISBLANK( Completed_Date__c )  &amp;&amp;  ISPICKVAL( Status__c , &apos;Completed&apos;)</errorConditionFormula>
        <errorMessage>Please Fill in Completed Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Decision_Outcome_Required_when_Completed</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Status__c, &quot;Completed&quot;) &amp;&amp; ISNULL( Decision_Outcome__c )</errorConditionFormula>
        <errorDisplayField>Decision_Outcome__c</errorDisplayField>
        <errorMessage>Decision/Outcome is required when Status is Completed.</errorMessage>
    </validationRules>
</CustomObject>